<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appLogo">AppLogo</string>
    <string name="aiCamera">AI Camera</string>
    <string name="detectionDescription">약의 글자가 보이도록 해주세요\n<small>셔터 버튼을 눌러 검색</small></string>
    <string name="search">검색</string>
    <string name="close">닫기</string>
    <string name="checkCountsOfMedicines">개의 의약품 검출</string>
    <string name="checkCountsOfMedicinesMessage">개수가 일치할 경우, 검색을 눌러주세요.</string>
    <string name="cameraPermission">카메라 권한 요청</string>
    <string name="cameraPermissionMessage">AI 카메라 기능을 사용하기 위해서는 카메라 권한이 필요합니다.</string>
    <string name="ok">확인</string>
    <string name="noMedicinesDetected">검출된 의약품이 없습니다</string>

    <string name="loadingAiModels">AI를 초기화하는 중입니다.</string>
    <string name="getDetectedObjects">Processing…</string>
    <string name="capturedImage">캡처된 이미지</string>
    <string name="zoomOut">축소</string>
    <string name="zoomIn">확대</string>
    <string name="detectionFailed">인식 실패</string>
    <string name="classifyingMedicines">인공지능이 약을 분류하고 있습니다</string>
    <string name="aiModelLoadFailed">AI 초기화 실패</string>
    <string name="connectingCamera">카메라 연결 중</string>
    <string name="connectingCameraFailed">카메라 연결 실패</string>

</resources>
