<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.android.mediproject.feature.camera.MedicinesDetectorViewModel" />

        <variable
            name="image"
            type="android.graphics.Bitmap" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            app:img="@{image}"
            android:layout_height="match_parent"
            android:contentDescription="@string/capturedImage" />

        <com.android.mediproject.feature.camera.tflite.OverlayView
            android:id="@+id/overlayView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            style="@style/Widget.Button.Circle"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/back"
            android:src="@drawable/left_arrow_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/zoomIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            style="@style/Widget.Button.Circle"
            android:contentDescription="@string/zoomIn"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintBottom_toTopOf="@id/zoomOut"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            style="@style/Widget.Button.Circle"
            android:id="@+id/zoomOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="48dp"
            android:contentDescription="@string/zoomOut"
            android:src="@drawable/baseline_remove_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
