<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootImageViewGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottomSheet"
            android:layout_alignParentTop="true"
            android:clipChildren="false">

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/capturedImage" />


            <ImageButton
                android:id="@+id/backBtn"
                style="@style/Widget.Button.Circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/back"
                android:src="@drawable/left_arrow_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/zoomIn"
                style="@style/Widget.Button.Circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/zoomIn"
                android:src="@drawable/baseline_add_24"
                app:layout_constraintBottom_toTopOf="@id/zoomOut"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/zoomOut"
                style="@style/Widget.Button.Circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="48dp"
                android:contentDescription="@string/zoomOut"
                android:src="@drawable/baseline_remove_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/bottomSheet"
            layout="@layout/view_confirm_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="-20dp" />

    </RelativeLayout>
</layout>
